--- a/Data_Cleaning.ipynb
+++ b/Data_Cleaning.ipynb
@@ -1299,7 +1299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Now plotting again the Scatter plot to verify"
+    "# Resulting Scatter Plot\n"
    ]
   },
   {
@@ -1546,144 +1546,6 @@
     "\n",
     "# Display the resulting DataFrame\n",
     "df_biomarkers_next_activity.head()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Creating a dataframe for Remaining Time Prediction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_sepsis_log = df_org.copy()\n",
-    "\n",
-    "# Identify the correct timestamp column\n",
-    "timestamp_col = 'Complete Timestamp'\n",
-    "\n",
-    "# Function to convert HH:MM.SS format into total seconds\n",
-    "def convert_to_seconds(time_str):\n",
-    "    try:\n",
-    "        parts = time_str.split(\":\")\n",
-    "        if len(parts) == 2:  # HH:MM format\n",
-    "            hours, minutes = int(parts[0]), float(parts[1])\n",
-    "            total_seconds = hours * 3600 + minutes * 60\n",
-    "        else:\n",
-    "            return None  \n",
-    "        return total_seconds\n",
-    "    except:\n",
-    "        return None  # Handle any unexpected format issues\n",
-    "    \n",
-    "# Apply conversion to the timestamp column\n",
-    "df_sepsis_log['Total Seconds'] = df_sepsis_log[timestamp_col].astype(str).apply(convert_to_seconds)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Activity</th>\n",
-       "      <th>Average Duration (seconds)</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Admission IC</td>\n",
-       "      <td>20969.126214</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Admission NC</td>\n",
-       "      <td>25375.864136</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>CRP</td>\n",
-       "      <td>5200.171265</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>ER Registration</td>\n",
-       "      <td>23205.787709</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>ER Sepsis Triage</td>\n",
-       "      <td>21411.995277</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           Activity  Average Duration (seconds)\n",
-       "0      Admission IC                20969.126214\n",
-       "1      Admission NC                25375.864136\n",
-       "2               CRP                 5200.171265\n",
-       "3   ER Registration                23205.787709\n",
-       "4  ER Sepsis Triage                21411.995277"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Sort data by Case ID and Total Seconds to maintain order\n",
-    "df_sepsis_log = df_sepsis_log.sort_values(by=['Case ID', 'Total Seconds'])\n",
-    "\n",
-    "# Calculate time duration for each activity within a case\n",
-    "df_sepsis_log['Next Total Seconds'] = df_sepsis_log.groupby('Case ID')['Total Seconds'].shift(-1)\n",
-    "df_sepsis_log['Duration'] = df_sepsis_log['Next Total Seconds'] - df_sepsis_log['Total Seconds']\n",
-    "\n",
-    "# Compute the average duration per activity\n",
-    "df_avg_duration = df_sepsis_log.groupby('Activity')['Duration'].mean().reset_index()\n",
-    "\n",
-    "# Rename columns for clarity\n",
-    "df_avg_duration.columns = ['Activity', 'Average Duration (seconds)']\n",
-    "\n",
-    "\n",
-    "# Display the resulting DataFrame\n",
-    "df_avg_duration.head()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_avg_duration.to_csv('Sepsis_Avg_Activity_Duration.csv', index=False)"
    ]
   },
   {
